# owlai

./: .gitignore  README.md  llm_scan.py  project_context.md  structure.txt
.github/workflows/: build-macos-unsigned.yml  build-windows-unsigned.yml
backend/: .env.example  pyproject.toml  requirements.txt  requirements.txt.bak.txt  run.py  sidecar_main.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  tenant_context.py
backend/app/prompts/: __init__.py  analyst.py  pipeline_extraction.py  plan.py
backend/app/prompts/fragments/: __init__.py  common_rules.py  data_conventions.py  echarts_guide.py  execution_profiles.py  map_guide.py
backend/app/prompts/skills/: __init__.py  derive_data_source.py  extract_scripts.py  extract_sop.py
backend/app/routers/: assets.py  chat.py  cloud_datasets.py  data_pipelines.py  database.py  execute.py  knowledge.py  llm.py  runtimes.py  skills.py  subtasks.py  tasks.py  updates.py  visualizations.py  warehouse.py
backend/app/services/: agent.py  cleanup.py  cloud_datasets.py  code_security.py  context_builder.py  data_processor.py  execution_helpers.py  execution_registry.py  export_service.py  freshness.py  pipeline_executor.py  sandbox.py  script_runner.py  task_executor.py  token_counter.py  warehouse.py
backend/app/services/agents/: __init__.py  analyst_agent.py  base.py  custom_handlers.py  orchestrator.py  plan_agent.py  task_manager_agent.py
backend/app/services/execution/: __init__.py  backend.py  local_backend.py  resolver.py  types.py
backend/app/services/execution/jupyter/: __init__.py  backend.py  probe.py  session_manager.py  types.py  uploader.py  wire.py
backend/app/tools/: __init__.py  definitions.py  registry.py  visualization.py
frontend/: .dependency-cruiser.js  .env.docker  .env.local.example  next.config.ts  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx  theme-initializer.tsx
frontend/src/contexts/: auth-context.tsx  i18n-context.tsx  (+3 more)
scripts/: buidl-sidecar.ps1  build-sidecar.ps1  build-sidecar.sh  cleanup-dev.ps1  cleanup-dev.sh
(+46 files in other folders)
