[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.8",
    "greenlet>=3.2.5",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "platformdirs>=4.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.48",
    "tabulate>=0.9.0",
    "uvicorn>=0.39.0",
    "xlrd>=2.0.2",
]
